--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@ $(function(){
 <li><a href="development/"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>受託開発</a></li>
 <li><a href="works/"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>開発実績</a></li>
 <li>
-<div class="p-mark">
+<!-- <div class="p-mark">
 <a href="https://privacymark.jp/">
 <img src="_images/21001415_100_JP.gif" alt="プライバシーマーク">
 </a>
-</div>
+</div> -->
 </li>
 </ul>
 </div>
