--- a/privacy/index.html
+++ b/privacy/index.html
@@ -128,15 +128,15 @@
 </ul>
 <p>本方針は、全ての従業者に配付して周知させるとともに、当社のWEBサイト、パンフレットなどに掲載することにより、いつでもどなたにも入手可能な措置を取るものとします。</p>
 <div class="privacy-mark-wrap">
-<div class="privacy-mark">
+<!-- <div class="privacy-mark">
 <a href="https://privacymark.jp/">
 <img src="../_images/21001415_100_JP.gif" alt="プライバシーマーク">
 </a>
-</div>
+</div>-->
 <div class="privacy-mark-p">
 <p class="right-text">以上</p>
-<p class="right-text">制定 2017年6月1日<br>
-最終改定 2017年8月16日<br>
+<p class="right-text">制定 2019年11月1日<br>
+最終改定 2019年11月1日<br>
 株式会社アクシス<br>
 代表取締役社長 前崎 孝夫
 </p>
@@ -243,13 +243,16 @@ TEL：03-5829-6475 (受付時間 9:30～18:30※)<br>
 <dt>e)認定個人情報保護団体</dt>
 <dd>
 <div class="privacy-contact">
+	<p>なし</p>
+</div>
+<!-- <div class="privacy-contact">
 <p>1.認定個人情報保護団体の名称<br>
 ：一般財団法人日本情報経済社会推進協会</p>
 <p>2.苦情の解決の申し出先<br>
 ：個人情報保護苦情相談室<br>
 〒106-0032 東京都港区六本木一丁目9-9 六本木ファーストビル内<br>
 TEL：03-5860-7565 / 0120-700-779</p>
-</div>
+</div> -->
 </dd>
 <dt>f)開示対象個人情報の開示等の求めに応じる手続き</dt>
 <dd>
