--- a/contact/recruit/index.html
+++ b/contact/recruit/index.html
@@ -140,9 +140,9 @@
 <h2>お仕事をお探しの方</h2>
 <dl>
 <dt>お名前<span class="req">必須</span></dt>
-<dd><input type="text" name="name" autocomplete="name" /><span>例：未来 ○○</span></dd>
+<dd><input type="text" name="name" autocomplete="name" /><span>例：山田 ○○</span></dd>
 <dt>ふりがな<span class="req">必須</span></dt>
-<dd><input type="text" name="kana" /><span>例：みらい ○○</span></dd>
+<dd><input type="text" name="kana" /><span>例：やまだ ○○</span></dd>
 <dt>ご年齢</dt>
 <dd><label><input type="radio" name="age" value="10代" class="btn-name" />10代</label><br>
 <label><input type="radio" name="age" value="20代" class="btn-name" />20代</label><br>
