--- a/contact/partner/index.html
+++ b/contact/partner/index.html
@@ -142,7 +142,7 @@
 <dt>会社名</dt>
 <dd><input type="text" name="organization"  autocomplete="organization"/><span>例：株式会社アクシス</span></dd>
 <dt>お名前<span class="req">必須</span></dt>
-<dd><input type="text" name="name" autocomplete="name" /><span>例：未来 ○○</span></dd>
+<dd><input type="text" name="name" autocomplete="name" /><span>例：山田 ○○</span></dd>
 <dt>メールアドレス<span class="req">必須</span></dt>
 <dd><input type="text" name="email" autocomplete="email" /><span>例：example@example.com <span class="br contact-br">※携帯電話のアドレスはご遠慮ください</span></span></dd>
 <dt>TEL</dt>
