--- a/partner/web/index.html
+++ b/partner/web/index.html
@@ -142,9 +142,9 @@
 <dt>役職</dt>
 <dd><input type="text" name="position" autocomplete="organization-title" /><span>例：IT事業部 チーフディレクター</span></dd>
 <dt>お名前<span class="req">必須</span></dt>
-<dd><input type="text" name="name" autocomplete="name" /><span>例：未来 ○○</span></dd>
+<dd><input type="text" name="name" autocomplete="name" /><span>例：山田 ○○</span></dd>
 <dt>ふりがな<span class="req">必須</span></dt>
-<dd><input type="text" name="kana" /><span>例：みらい ○○</span></dd>
+<dd><input type="text" name="kana" /><span>例：やまだ ○○</span></dd>
 <dt>メールアドレス<span class="req">必須</span></dt>
 <dd><input type="text" name="email" autocomplete="email" /><span>例：example@example.com <span class="br contact-br">※携帯電話のアドレスはご遠慮ください</span></span></dd>
 <dt>TEL</dt>
