アナリティクス　トラッキングコードの追加

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>お問い合せ | SES 株式会社アクシス</title>
 <meta name="description" content="弊社業務・サービス等へのご質問、ビジネスパートナー・採用に関するご相談はこちらから。（TEL：03-5829-6475）">
