--- a/contact/partner/index.html
+++ b/contact/partner/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>ビジネスパートナーのご相談 | SES 株式会社アクシス</title>
 <meta name="description" content="現在SES事業、システム開発事業、WEBコンテンツ制作事業において、ご協力頂けるパートナー会社・協力会社様を募集しております。ご興味をお持ち頂けたご担当者様は、こちらよりお問い合わせ下さい。（TEL：03-5829-6475）">
