--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>SES システムエンジニアリングサービス | 株式会社アクシス</title>
 <meta name="description" content="株式会社アクシスは東京都港区でSES事業を中心とし、システムの受託開発やWEBコンテンツ制作事業を行っております。確かな技術力と高い人間力を重要視し、成果に繋がるサービスをご提案致します。">
