--- a/partner/index.html
+++ b/partner/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>ビジネスパートナー募集 | SES 株式会社アクシス</title>
 <meta name="description" content="弊社ではSES事業・システム開発事業、WEBコンテンツ事業において、ご協力頂けるパートナー会社・協力会社様を募集しております。事業毎のパートナー募集についての詳細は、各ページをご覧下さい。">
