--- a/partner/ses/index.html
+++ b/partner/ses/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>SES事業パートナー募集 | SES 株式会社アクシス</title>
 <meta name="description" content="弊社では良質なシステムエンジニアリングサービスの展開を目指し、日々尽力し続けております。急な人材不足や専門スキルの補充等、お客様のご要望に沿った最適な、優秀なエンジニアをご提案致します。">
