--- a/recruit/contact/index.html
+++ b/recruit/contact/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>掲載求人へのお問い合せ | SES 株式会社アクシス</title>
 <meta name="description" content="弊社ではシステムエンジニア、ネットワークエンジニア、WEBデザイナー等様々なジャンルの人材を募集しています。未経験からの挑戦、業界でのさらなるステップアップをお考えの方はこちらよりご連絡下さい。">
