--- a/recruit/web/index.html
+++ b/recruit/web/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>WEBデザイン・開発エンジニアの採用情報 | SES 株式会社アクシス</title>
 <meta name="description" content="WEBデザイン・開発エンジニアの求人情報をご紹介しています。専門的なスキルを習得したい方、現在お持ちのスキルを活かし、ステップアップを望む方のご応募をお待ちしております。">
