--- a/company/index.html
+++ b/company/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>会社概要 | SES 株式会社アクシス</title>
 <meta name="description" content="株式会社アクシスは、SES事業を中心とし、システムの受託開発やWEBコンテンツ制作事業を行っております。「人」と「人」の繋がり、関わり合いを最も大切にし、日々挑戦と成長を続けています。">
