--- a/contact/business/index.html
+++ b/contact/business/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>業務に関するお問い合せ | SES 株式会社アクシス</title>
 <meta name="description" content="弊社業務へのご質問、サービス等へのお問い合わせはこちらよりご連絡下さい。ビジネスパートナー、採用に関するご相談は別途専用フォームをご用意しております。（TEL：03-5829-6475）">
