--- a/development/index.html
+++ b/development/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>受託開発 | SES 株式会社アクシス</title>
 <meta name="description" content="弊社ではお客様のお悩みや目的に応じ、システムやWEBコンテンツ全体の企画提案から行っております。ご要望をお伺いした上で、最適なプランをご提案し、ビジネスパートナーとして問題解決に全力を尽くします。">
