--- a/partner/web/index.html
+++ b/partner/web/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>WEB事業パートナー募集 | SES 株式会社アクシス</title>
 <meta name="description" content="サイトの企画・デザイン・コーディング、アプリ開発、運用、コンサルティング等、多様なご提案を行っております。現在パートナー企業様を募集しておりますので、ご協力頂ける企業様は是非一度ご連絡下さい。">
