--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>プライバシーポリシー | SES 株式会社アクシス</title>
 <meta name="description" content="株式会社アクシスでは、プライバシーポリシーに則り、個人情報に関する法令およびその他の規範を遵守し、お客様の大切な個人情報の保護に万全を尽くしております。">
