--- a/recruit/index.html
+++ b/recruit/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>採用情報 | SES 株式会社アクシス</title>
 <meta name="description" content="「日々、挑戦と成長を。」弊社では未経験からでも、未来で活躍できるエンジニアを目指すことができます。経験豊富なエンジニアの方には、さらなるステップアップに繋がる活躍の場をご用意しております。">
