--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>サイトマップ | SES 株式会社アクシス</title>
 <meta name="description" content="株式会社アクシスのサイトマップはこちらです。弊社は東京都港区でSES事業を中心とし、システムの受託開発やWEBコンテンツ制作事業を行っております。お電話はTEL：03-5829-6475まで。">
