--- a/works/index.html
+++ b/works/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170915221-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170915221-1');
+</script>
 <meta charset="UTF-8">
 <title>開発実績 | SES 株式会社アクシス</title>
 <meta name="description" content="弊社の開発実績をご紹介します。WEBコンテンツを中心に、システムの開発から自社で行っておりますので、顧客管理システムや図面配信システム等、お客様のご要望のヒアリングから最適なプランをご提案致します。">
