--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
   gtag('config', 'UA-170915221-1');
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TTBLR6F');</script>
+<!-- End Google Tag Manager -->
 <meta charset="UTF-8">
 <title>SES システムエンジニアリングサービス | 株式会社アクシス</title>
 <meta name="description" content="株式会社アクシスは東京都港区でSES事業を中心とし、システムの受託開発やWEBコンテンツ制作事業を行っております。確かな技術力と高い人間力を重要視し、成果に繋がるサービスをご提案致します。">
@@ -60,6 +67,10 @@ $(function(){
 
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTBLR6F"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div id="bodyBack">
 <header>
 <div id="titleBox">
