--- a/recruit/index.html
+++ b/recruit/index.html
@@ -10,6 +10,13 @@
 
   gtag('config', 'UA-170915221-1');
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TTBLR6F');</script>
+<!-- End Google Tag Manager -->
 <meta charset="UTF-8">
 <title>採用情報 | SES 株式会社アクシス</title>
 <meta name="description" content="「日々、挑戦と成長を。」弊社では未経験からでも、未来で活躍できるエンジニアを目指すことができます。経験豊富なエンジニアの方には、さらなるステップアップに繋がる活躍の場をご用意しております。">
@@ -61,6 +68,10 @@
 
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTBLR6F"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div id="bodyBack">
 <header>
 <div id="titleBox">
