--- a/development/index.html
+++ b/development/index.html
@@ -136,16 +136,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p>弊社ではお客様のお悩みや目的に応じ、VBA・マクロによる業務効率化、データ入力代行サービス、WEBコンテンツ制作、システム開発等様々なサービスをご提供しております。ご要望をお伺いした上で最適なプランをご提案し、ビジネスパートナーとして問題解決に全力を尽くします。</p>
 </div>
 <ul id="contact-list" class="content-area">
-<li><a href="../vba/">
+<li><a href="../vba/" target="_blank">
 <img src="../_images/development_vba.png" alt="
 VBA・マクロで業務効率化">
 <p>VBA・マクロで<span class="br">業務効率化</span></p>
 </a></li>
-<li><a href="../data/">
+<li><a href="../data/" target="_blank">
 <img src="../_images/development_data.png" alt="データ入力代行サービス">
 <p>データ入力<span class="sp-br">代行サービス</span></p>
 </a></li>
-<li><a href="../web/">
+<li><a href="../web/"target="_blank">
 <img src="../_images/development_web.png" alt="WEBコンテンツ制作">
 <p>WEBコンテンツ<span class="sp-br">制作</span></span></p>
 </a></li>
