最新ソースマージ_20200903

--- a/vba/index.html
+++ b/vba/index.html
@@ -185,7 +185,7 @@
 				</div>
 			</div>
 			<div class="container">
-				<p class="development__desc">お客様のご要望にあわせてオーダーメイドでシステムを開発いたします。</p>
+				<p class="development__desc">お客様のご要望に合わせてオーダーメイドでシステムを開発いたします。</p>
 
 				<!-- ROW -->
 				<div class="section-inner pt-0">
@@ -325,7 +325,7 @@
 
 										</h4>
 										<p class="reason-card__text">
-											システム開発はご希望の仕様・納期によって費用が変わります。アクシスではお客様のご要望にあわせて高品質・低価格のシステムをご提供いたします。
+											システム開発はご希望の仕様・納期によって費用が変わります。アクシスではお客様のご要望に合わせて高品質・低価格のシステムをご提供いたします。
 
 										</p>
 									</div>
@@ -821,7 +821,7 @@
 						</h4>
 						<p class="faq__answer">
 							<span class="faq__icon">A2</span>
-							<span class="faq__text">システムの仕様や規模によって様々です。納期のご希望がある場合はそちらにあわせてご提案いたします。
+							<span class="faq__text">システムの仕様や規模によって様々です。納期のご希望がある場合はそちらに合わせてご提案いたします。
 
 
 							</span>
