プライバシーマーク取得に向けての修正

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -156,7 +156,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="privacy-mark-p">
 <p class="right-text">以上</p>
 <p class="right-text">制定 2014年4月14日<br>
-<!-- 最終改定 2019年11月1日<br> -->
+最終改定 2019年11月1日<br>
 株式会社アクシス<br>
 代表取締役社長 前崎 孝夫
 </p>
