--- a/contact/recruit/index.html
+++ b/contact/recruit/index.html
@@ -28,6 +28,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="apple-touch-icon" href="https://axcis.co.jp/apple-touch-icon.png" />
 <link rel="stylesheet" href="../../_css/html5reset-1.6.1.css" />
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<script src="https://kit.fontawesome.com/b9fb524f68.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="../../_css/style.css" />
 <link rel="stylesheet" href="../../_css/style-sp.css" media="only screen and (min-width: 0px) and (max-width: 480px)" />
 <link rel="stylesheet" href="../../_css/style-tb.css" media="only screen and (min-width: 481px) and (max-width: 768px)"/>
@@ -219,9 +220,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </ul>
 <p>3.個人情報の利用目的</p>
 <p>・採用応募者並びにそれに準ずる方の個人情報は、弊社の人事採用活動（書類審査、面接、評価、応募者への連絡等）のために利用いたします。</p>
-<p>4.個人情報取扱いの委託</p>
-<p>当社は事業運営上、前項利用目的の範囲に限って個人情報を外部に委託することがあります。この場合、個人情報保護水準の高い委託先を選定し、個人情報の適正管理・機密保持についての契約を交わし、適切な管理を実施させます。</p>
-<p>5.個人情報の開示等の請求</p>
+<p>4.個人情報の開示等の請求</p>
 <p>ご本人様は、当社に対してご自身の個人情報の開示等に関して、下記の当社問合わせ窓口に申し出ることができます。その際、当社はお客様ご本人を確認させていただいたうえで、合理的な期間内に対応いたします。</p>
 <p>【お問合せ窓口】</p>
 <ul>
@@ -230,7 +229,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li>TEL:03-5829-6475 （受付時間 9:30～18:30※）</li>
 <li>※ 土・日曜日、祝日、年末年始、ゴールデンウィーク期間は翌営業日以降の対応とさせていただきます。</li>
 </ul>
-<p>6.個人情報を提供されることの任意性について</p>
+<p>5.個人情報を提供されることの任意性について</p>
 <p>ご本人様が当社に個人情報を提供されるかどうかは任意によるものです。ただし、必要な項目をいただけない場合、適切な対応ができない場合があります。</p>
 </div>
 </dd>
@@ -241,6 +240,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <button type="submit">入力内容の確認画面へ</button>
 </div>
 </form>
+<div class="privacy-msg">
+<p>弊社に個人情報を含む書類を別途お送りいただく場合は、下記の「採用応募者の個人情報の取扱いについて」の書類が必要となります。<br>
+フォーム送信後にお送りする返信メール内容をご必ず確認の上、お送りください。</p>
+<div class="basicBtn-wrap">
+<p class="basicBtn"><a target="_blank" href="../../pdf/採用応募者の個人情報の取扱いについて.pdf">PDFダウンロード <i class="far fa-file-pdf"></i></a></p>
+</div><!-- privacy-msg -->
+</div>
 </div>
 <!-- <ul class="recruitNav contact-nav spNone">
 <li><a href="../business/">業務に関するお問い合せ</a></li>
